# wheres-the-ball

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: 00-vision-general.md  fase-0-viabilidad.md  fase-1-ablation-temporal.md  fase-1-auditoria.md  fase-1-datos-soccernet.md  fase-1-resultados.md  fase-1-rq2-temporal.md  fase-1-rq3-informed.md  nivel-1-benchmark-vlm.md  nivel-2-fase-0.md  nivel-2-fewshot.md  nivel-2-multideporte.md  nivel-2-rq2-ablation.md  nivel-2-v1-temporal.md  nivel-3-geometria-topologia.md
modal_app/: qwen_vl.py
scripts/: audit_fase1.py  fase0_claude_api.py  fase0_report.py  fase0_smoke.py  fase1_build_dataset.py  fase1_build_temporal.py  fase1_report.py  fase1_report_temporal.py  fase1_run.py  fase1_run_temporal.py  geo_baselines.py  inpaint_lama.py  make_figures.py  nivel2_ablation_rq2.py  nivel2_consolidate.py  nivel2_control_warmstart.py  nivel2_fewshot.py  nivel2_specialist.py  nivel2_v1_temporal.py
src/wheres_the_ball/baselines/: geometric.py
src/wheres_the_ball/data/: ball_state.py  field_tracking.py  football_ball_detection.py  soccernet_tracking.py
src/wheres_the_ball/eval/: metrics.py  viz.py
src/wheres_the_ball/masking/: inpaint.py
src/wheres_the_ball/models/: anthropic_claude.py  azure_gpt.py  base.py
src/wheres_the_ball/prompts/: localize.py
