[project]
name = "wheres-the-ball"
version = "0.0.1"
description = "Can a generalist VLM infer where the (hidden) ball is from the players' configuration? — experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=0.24",
    "datasets>=2.20",
    "pillow>=10.0",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "openai>=1.40",
    "anthropic>=0.39",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

# Deep inpainting fallback (LaMa): if OpenCV inpainting is not coherent enough, install
# separately in its own venv to avoid the pillow<10 pin, e.g. `uvx iopaint` or
# `pip install simple-lama-inpainting`. Not a hard dependency of this project.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wheres_the_ball"]
